--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = mg_earth
-description = Add ground slopes for Minetest Game
+description = Lua mapgen with many options.
 depends = 
-optional_depends = default,30biomes,aotearoa,australia,ethereal,gal,valleys_c,
+optional_depends = default,gal,
