--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = mg_earth
-description = Lua mapgen with many options.
+description = Add ground slopes for Minetest Game
 depends = 
-optional_depends = default,gal,
+optional_depends = default,gal,mapgen_rivers,
