Included new optional deps definitions

--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = mg_earth
 description = Add ground slopes for Minetest Game
 depends = 
-optional_depends = default,gal,mapgen_rivers,
+optional_depends = default,mcl_core,mcl_nether,gal,mapgen_rivers,
